k8s/stunner/00-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: stunner
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
